# rust_pyfunc

./: .gitignore  CLAUDE.md  Cargo.toml  PriceTree.html  PriceTreeViz.html  README.md  RollingFutureAccessor.html  RollingPastAccessor.html  TailV4LegacyStyleData.html  TailV5LegacyStyleData.html  TradingDay.html  abm_generate_names.html  abm_step_two.html  adjust_afternoon.html  aggregate_agent_feature_triplets_to_daily_table.html  alter.sh  analyze_asks.html  analyze_hawkes_indicators.html  analyze_long_orders.html  analyze_long_orders_python.html  analyze_lz_performance.py  analyze_retreat_advance.html  analyze_retreat_advance_v2.html  analyze_sequence_permutations_numpy.html  analyze_sequence_permutations_optimized.html  analyze_sequence_permutations_optimized_final.html  analyze_sequence_permutations_optimized_ultimate.html  analyze_sequence_permutations_optimized_v1.html  analyze_sequence_permutations_optimized_v2.html  analyze_sequence_permutations_optimized_v3.html  analyze_sequence_permutations_optimized_v5.html  analyze_sequence_permutations_v0816.html  analyze_sequence_permutations_v0816_fixed.html  analyze_sequence_permutations_v0816_optimized.html  analyze_sequence_permutations_v0816_ultra.html  backup_exists.html  batch_factor_neutralization.html  batch_factor_neutralization_io_optimized.html  batch_factor_neutralization_optimized.html  batch_factor_neutralization_parallel_optimized.html  (+341 more)
docs/: dct_basis_functions.html  dct_path_patterns.html  dct_reconstruction.html  dct_visualization.py
examples/: verify_cov_det_opt.rs  verify_factor_store_v5.rs
python/: worker_process.py
src/: allo_microstructure.rs  allo_microstructure_v2.rs  allo_microstructure_v3.rs  backup_column_cache.rs  backup_reader.rs  backup_writer.rs  copula.rs  corr_diff_features.rs  cross_stock_regression.rs  cross_stock_regression_fast.rs  cross_stock_regression_peak.rs  dct_transform.rs  difference_matrix.rs  effective_memory_length.rs  factor_neutralization_io_optimized.rs  factor_pipeline.rs  factor_store_v5.rs  fast_csv_reader.rs  features.rs  follow2026_backtest.rs  frontier_dist.rs  gp_correlation_dimension.rs  hawkes_advisor.rs  hawkes_analysis.rs  illusion_liquidity_distance.rs  integer_small_peak_features.rs  lib.rs  limit_order_lifecycle.rs  limit_order_lifecycle_v2.rs  long_order_analysis.rs  lz_complexity.rs  microstructure_pattern_features.rs  microstructure_pattern_features_optimized.rs  microstructure_pattern_features_v2.rs  multiprocess.rs  mutual_information.rs  mutual_information_2d.rs  mutual_information_2d_fixed.rs  observable_order_metrics.rs  order_pair_metrics.rs  (+30 more)
static/: style.css
templates/: function.html
tests/: ERROR_REPORTING_SUCCESS.md  FINAL_SOLUTION_SUMMARY.md  (+51 more)
(+56 files in other folders)
