[package]
name = "rust_pyfunc"
version = "0.7.0"
edition = "2021"
description = "A collection of high-performance Python functions implemented in Rust"
readme = "README.md"
authors = ["chenzongwei"]
license = "MIT"
repository = "https://github.com/chen-001/rust_pyfunc"
keywords = ["python", "rust", "algorithms", "performance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_pyfunc"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
ndarray = "0.15"
nalgebra = "0.29.0"
numpy = "0.18"
rayon = "1.8"
rand = { version = "0.8", features = ["std"] }
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[project]
name = "rust_pyfunc"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[[bench]]
name = "rolling_rank"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3